Fix deploying to the MavenCentral